--- a/src/css/styles.css
+++ b/src/css/styles.css
@@ -1,3 +1,14 @@
-body {
-  background: radial-gradient(circle, rgba(63,94,251,1) 0%, rgba(252,70,107,1) 100%);
+* {
+  font-family: 'Titillium Web', sans-serif;
 }
+
+body {
+  background: rgb(168, 170, 173) 0%;
+}
+
+nav {
+  background:rgb(121, 172, 248);
+  display: flex;
+  justify-content: space-evenly;
+}
+
