--- a/src/css/styles.css
+++ b/src/css/styles.css
@@ -4,13 +4,14 @@
 
 html {
   height: 100%;
+  background-color: black;
 }
 
 body {
-  background: rgb(168, 170, 173) 0%;
   display: flex;
-  justify-content: center;
+  flex-direction: column;
   height: 100%;
+  width: 100%;
 }
 
 .login-page {
@@ -44,13 +45,57 @@ body {
   font-weight: bold;
 }
 
-.left-nav,
-.money-spent,
-.search {
-  background-color: aqua;
+.main-dashboard {
+  background-image: url('../images/hotel-lobby.jpg');
+  background-size: cover;
+  height: 100%;
+  width: 100%;
+}
+
+.book-now-nav {
   display: flex;
   flex-direction: column;
+}
+
+.search-rooms {
+  background-color: black;
+  color: white;
+  border-radius: 5px;
+  border-style: solid;
+  border-color: black;
+  font-size: medium;
+}
+
+.search-rooms:hover {
+  background-color: rgba(0, 0, 0, 0.5);
+  border-style: solid;
+  border-color: black;
+  cursor: pointer;
+}
+
+.inputs {
+  padding: 5px;
+  display: flex;
+  justify-content: space-between;
+}
+
+#roomType,
+#searchDate {
+  background-color: black;
+  color: white;
+  font-size: large;
+}
+ 
+.right-nav,
+.money-spent,
+.search {
+  color: white;
+  display: flex;
+  justify-content: space-around;
+  flex-direction: column;
   align-items: center;
+  padding: 10px 30px;
+  font-size: large;
 }
 
 .login-label,
@@ -66,8 +111,9 @@ body {
 .login-message {
   color: crimson;
   font-weight: bold;
-  background-color: rgba(0, 0, 0, 0.29);
+  background-color: rgba(0, 0, 0, 0.5);
   padding: 5px 10px;
+  border-radius: 2px;
 }
 
 .login-name {
@@ -75,11 +121,12 @@ body {
 }
 
 nav {
-  background:rgb(121, 172, 248);
+  background:rgba(0, 0, 0, 0.5);
   width: 100%;
   height: 100px;
   display: flex;
-  justify-content: space-evenly;
+  justify-content: space-between;
+  padding: 10px;
 }
 
 .hidden {
