--- a/src/css/styles.css
+++ b/src/css/styles.css
@@ -14,6 +14,14 @@ body {
   width: 100%;
 }
 
+p {
+  margin: 5px;
+}
+
+#userLogo {
+  filter: invert(100%);
+}
+
 .login-page {
   background-image: url('../images/vecteezy_palm-island-dubai_1906870.png');
   background-size: cover;
@@ -40,9 +48,15 @@ body {
 
 .login-button {
   background-color: aqua;
-  border-style: none;
+  border-style: solid;
+  border-color: aqua;
   padding: 10px 30px;
   font-weight: bold;
+}
+
+.login-button:hover {
+  cursor: pointer;
+  border-color: black;
 }
 
 .main-dashboard {
@@ -52,12 +66,91 @@ body {
   width: 100%;
 }
 
+.booked-rooms {
+  float: right;
+  text-align: center;
+  margin-right: 10px;
+  background-color: rgba(0, 0, 0, 0.5);
+  border-style: solid;
+  border-color: antiquewhite;
+}
+
+.searched-rooms {
+  float: left;
+  text-align: center;
+  margin-left: 10px;
+  background-color: rgba(0, 0, 0, 0.5);;
+  border-style: solid;
+  border-color: antiquewhite;
+}
+
+.total-spent,
+.available-rooms-header {
+  margin: 5px;
+  color: white;
+}
+
+.info {
+  background-color: rgba(0, 0, 0, 0.7);
+  color: white;
+  width: 50%;
+  border-radius: 10px;
+}
+
+.display-results {
+  display: flex;
+  flex-direction: column;
+  float: right;
+  align-content: flex-end;
+  height: 724px;
+  overflow: auto;
+}
+
+.available-rooms {
+  display: flex;
+  justify-content: space-evenly;
+  float: left;
+  flex-wrap: wrap;
+  height: 724px;
+  width: 700px;
+  overflow: auto;
+  color: white;
+}
+
+.residential-suite {
+  background-image: url('../images/residential-suite.png');
+}
+
+.junior-suite {
+  background-image: url('../images/junior-suite.png');
+}
+
+.suite {
+  background-image: url('../images/suite.png');
+}
+
+.single-room {
+  background-image: url('../images/single-room.png');
+}
+
+.residential-suite,
+.junior-suite,
+.single-room,
+.suite {
+  background-size: cover;
+  width: 320px;
+  height: 188px;
+  margin: 5px;
+  border-radius: 12px;
+}
+
 .book-now-nav {
   display: flex;
   flex-direction: column;
 }
 
-.search-rooms {
+.search-rooms,
+.book-now {
   background-color: black;
   color: white;
   border-radius: 5px;
@@ -66,7 +159,8 @@ body {
   font-size: medium;
 }
 
-.search-rooms:hover {
+.search-rooms:hover,
+.book-now:hover {
   background-color: rgba(0, 0, 0, 0.5);
   border-style: solid;
   border-color: black;
@@ -81,9 +175,10 @@ body {
 
 #roomType,
 #searchDate {
-  background-color: black;
-  color: white;
+  background-color: rgba(255, 255, 255, 0.519);
+  color: rgb(0, 0, 0);
   font-size: large;
+  border-style: none;
 }
  
 .right-nav,
