--- a/src/css/styles.css
+++ b/src/css/styles.css
@@ -12,6 +12,7 @@ body {
   flex-direction: column;
   height: 100%;
   width: 100%;
+  overflow: hidden;
 }
 
 p {
@@ -79,7 +80,7 @@ p {
   float: left;
   text-align: center;
   margin-left: 10px;
-  background-color: rgba(0, 0, 0, 0.5);;
+  background-color: rgba(0, 0, 0, 0.7);;
   border-style: solid;
   border-color: antiquewhite;
 }
