--- a/src/css/styles.css
+++ b/src/css/styles.css
@@ -98,6 +98,12 @@ p {
   border-radius: 10px;
 }
 
+.booking-message {
+  color: white;
+  font-size: large;
+  text-align: center;
+}
+
 .display-results {
   display: flex;
   flex-direction: column;
